--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -1,6 +1,7 @@
 .productsWrapper {
     display: flex;
     flex-direction: column;
+    // align-items: center;
     height: 100%;
     font-family: Abel;
 
@@ -9,11 +10,30 @@
         padding: 20px;
         font-family: Gruppo;
         font-size: 50px;
-
     }
     .signOut {
         display: flex;
         justify-content: flex-end;
         padding: 20px;
+        transition: 0.5s;
+         button {
+             padding: 10px;
+             border: none;
+             color:  #1f1f1f;
+             background-color: whitesmoke;
+             border-radius: 2px;
+             &:hover {
+                transition: 0.5s;
+                box-shadow: 10px 10px 10px rgba(0,0,0, 0.5);
+            }
+         }
     }
+
+    .individualProduct {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
 }
