placed images in the home page

--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -1,7 +1,7 @@
 .productContainer {
     display: flex;
     flex-direction: column;
-    border: 2px solid pink;
+    // border: 2px solid pink;
     height: 400px;
     width: 500px;
     justify-content: space-evenly;
