--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -4,7 +4,7 @@
     align-items: center;
     height: 10%;
     width: 100%;
-    border: 2px solid red;
+    border-bottom: 0.5px solid#1f1f1f;
     
     .navList {
         display: flex;
