--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -4,6 +4,8 @@
     // align-items: center;
     height: 100%;
     font-family: Abel;
+    
+
 
     h1 {
         text-align: center;
@@ -15,6 +17,7 @@
         display: flex;
         justify-content: flex-end;
         padding: 20px;
+        margin-right: 65px;
         transition: 0.5s;
          button {
              padding: 10px;
@@ -31,8 +34,15 @@
 
     .individualProduct {
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        // flex-direction: column;
+        // height: 100%;
+        // width: 100%;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: space-evenly;
+    
+       
+    
 
     }
 
