--- a/src/components/Products/SearchBar/SearchBar.module.scss
+++ b/src/components/Products/SearchBar/SearchBar.module.scss
@@ -7,5 +7,15 @@
     padding: 10px;
     text-align: right;
     margin: 20px;
+    border:0;
+    outline:0;
+    border-bottom: 0.5px solid  #1f1f1f;
+    
+    &:hover {
+        transition: 0.5s;
+        box-shadow: 10px 10px 10px rgba(0,0,0, 0.5);
+    }
+
+  
     
 }
