--- a/src/components/LandingPage/LandingPage.module.scss
+++ b/src/components/LandingPage/LandingPage.module.scss
@@ -4,11 +4,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: Gruppo;
+
+    h1 {
+        padding: 10px;
+        font-size: 35px;
+    }
+    h2 {
+        font-size: 20px;
+        padding: 5px;
+    }
+
 
     .gridWrapper {
         display: flex;
-        height: 700px;
-        width: 900px;
+        height: 500px;
+        width: 700px;
         // border: 2px solid black;
 
         .pictures {
