--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -38,8 +38,10 @@
         button {
             padding: 10px;
             border: none;
-            color:  #1f1f1f;
-            background-color: whitesmoke;
+            // color:  #1f1f1f;
+            // background-color: whitesmoke;
+            background-color: #f33f3f;
+            color: white;
             border-radius: 2px;
             &:hover {
                transition: 0.5s;
