--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -1,10 +1,15 @@
 .productContainer {
     display: flex;
     flex-direction: column;
-    height: 400px;
+    height: 500px;
     width: 500px;
-    justify-content: space-evenly;
+    // justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
+
+    h3, p, img {
+        padding-bottom: 10px;
+    }
  
     span {
         font-weight: bold;
