--- a/src/components/NavBar/NavItem/NavItem.module.scss
+++ b/src/components/NavBar/NavItem/NavItem.module.scss
@@ -6,3 +6,11 @@
          text-decoration: none;
      }
 } 
+
+
+@media only screen and (max-width: 525px) {
+    .navItem {
+        font-size: 15px;
+        padding: 30px;
+    }
+}
