--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -15,3 +15,11 @@
         font-weight: bold;
     }
 }
+
+@media only screen and (max-width: 525px) {
+    .productContainer {
+        text-align: center;
+        margin: 0 10px 0 10px;
+        height: 600px;
+    }
+}
