Some changes made to the search bar style

--- a/src/components/Products/SearchBar/SearchBar.module.scss
+++ b/src/components/Products/SearchBar/SearchBar.module.scss
@@ -2,7 +2,10 @@
     display: flex;
     justify-content: flex-end;
     padding: 10px;
-    text-align: right;
+    text-align: left;
+    font-size: 25px;
+    font-family: Abel;
+    padding-bottom: 30px;
     margin: 20px;
     border:0;
     outline:0;
