--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -22,6 +22,8 @@
             h1 {
                 font-size: 25px;
                 margin-bottom: 10px;  
+                background-color: white;
+                opacity: 0.6;
             }
     
             h2 {
