ready to deploy

--- a/src/components/Products/SearchBar/SearchBar.module.scss
+++ b/src/components/Products/SearchBar/SearchBar.module.scss
@@ -14,5 +14,12 @@
     &:hover {
         transition: 0.5s;
         box-shadow: 10px 10px 10px rgba(0,0,0, 0.5);
+        border-bottom: none;
     }  
+}
+
+@media only screen and (max-width: 525px) {
+    .searchBar {
+        font-size: 20px;
+    }
 }
